main.py versión 2
Falta solucionar problema de que las variables tienden a ser 0 para encontrar la solución

--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,9 @@
 gurobi.log
+
+# Ignorar la carpeta Resultados
+/Resultados/
+
+# Otros archivos y carpetas que deseas ignorar
+*.pyc
+__pycache__/
+.env
