--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,10 @@
 gurobi.log
 
 # Ignorar la carpeta Resultados
-/Resultados/
+/Resultados
 
 # Otros archivos y carpetas que deseas ignorar
 *.pyc
 __pycache__/
 .env
+/Resultados
